--- a/lang/de_de.lang
+++ b/lang/de_de.lang
@@ -1,5 +1,6 @@
 product = Produkte
 product_settings = Einstellungen
+product_title = Produkte
 
 product_table = 📦 Produkte
 product_category_table = 📦 Kategorien 
