--- a/lang/it_it.lang
+++ b/lang/it_it.lang
@@ -32,3 +32,11 @@ product_variant_status_online = Pubblicato
 product_variant_status_offline = Bozza
 
 product_docs = Aiuto
+
+product_docs_a_intro = Einleitung
+product_docs_d_example = Beispiele
+product_docs_product = Produkte
+product_docs_product_category = Kategorien
+product_docs_product_variant = Varianten
+product_docs_url = URL
+product_docs_settings = Einstellungen
